# react-app-rs

./: README.md  docker-compose.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  crud.db
backend/db_layer/: Cargo.toml
backend/db_layer/migrations/2022-02-27-091505_create_todos/: up.sql
backend/db_layer/src/: lib.rs  schema.rs
backend/web_layer/: Cargo.toml
backend/web_layer/src/: main.rs  router.rs
frontend/: .dockerignore  Dockerfile
frontend/todos/: package-lock.json  package.json
frontend/todos/public/: manifest.json
frontend/todos/src/: App.js
frontend/todos/src/components/: NewTodo.js  Todos.js
