[package]
name = "db_layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"
anyhow = "1.0.55"
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.31"
