[package]
name = "web_layer"
version = "0.1.0"
edition = "2021"


[dependencies]
db_layer= {path = "../db_layer"}
axum = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.31"
tracing-subscriber = { version="0.3.9", features = ["env-filter"] }
anyhow = "1.0.55"
chrono = "0.4.19"
tower-http = { version = "0.2.3", features = ["cors"] }